# cppmary

./: .gitignore  CMakeLists.txt  iOS.cmake
data/: bai.htsvoice  bai.lab  mix_excitation_5filters_199taps_48Kz.txt  mix_excitation_filters.txt  pinyin_han.txt  zh_ph64_lexicon.dict
examples/: CMakeLists.txt  HttpServer.cpp  libtest.cpp
include/: common.h  cppmary.h  feature.h  features.h  modules.h
include/common/: JiebaSegment.h  Lexicon.h  MaryBase.h  MaryXml.h  Ptr.h  ReferenceCounted.h  WordsProcess.h  convertPinyin.h  stringUtil.h  stringUtils.h  util.h
include/features/: Allophone.h  AllophoneSet.h  FeatureProcessor.h  FeatureProcessorBase.h  FeatureProcessorManager.h  GenericFeatureProcessors.h  LanguageFeatureProcessors.h  PhoneTranslator.h  StringTranslator.h  Target.h  TargetElementNavigator.h  TargetFeatureComputer.h
include/hts_engine/: HTS_engine.h
include/modules/: HtsEngine.h  InterModules.h  LabelGenerator.h  Phonemiser.h  Pronunciation.h  Prosody.h  TextToMaryXml.h  Tokenizer.h
src/: CMakeLists.txt  cppmary.cpp  cppmaryAll.cpp
src/common/: JiebaSegment.cpp  Lexicon.cpp  MaryBase.cpp  MaryXml.cpp  ReferenceCounted.cpp  WordsProcess.cpp  convertPinyin.cpp  stringUtil.cpp  stringUtils.cpp  util.cpp
src/features/: Allophone.cpp  AllophoneSet.cpp  FeatureProcessor.cpp  FeatureProcessorBase.cpp  FeatureProcessorManager.cpp  GenericFeatureProcessors.cpp  LanguageFeatureProcessors.cpp  PhoneTranslator.cpp  StringTranslator.cpp  Target.cpp  TargetElementNavigator.cpp  TargetFeatureComputer.cpp
src/hts_engine/: HTS_audio.c  HTS_gstream.c  HTS_hidden.h  HTS_label.c  HTS_model.c  HTS_pstream.c  HTS_sstream.c
src/modules/: HtsEngine.cpp  InterModules.cpp  LabelGenerator.cpp  Phonemiser.cpp  Pronunciation.cpp  Prosody.cpp  TextToMaryXml.cpp  Tokenizer.cpp
test/: CMakeLists.txt  hts_engine.c  jieba_test.cpp  mix_pinyin_word.txt  module_test.cpp  pinyin_han.txt  pinyin_utf8_test.cpp  pugi_test.cpp  refcount_test.cpp  tree.xml
test/unittest/: CMakeLists.txt  jieba_test.cpp
